--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.10",
     "vaul": "^1.1.2",
     "zod": "^3.25.67",
